# mayfig

./: Cargo.toml  readme.md
.github/workflows/: action.yml
examples/: annotate-custom.rs  annotate.rs  enum.rs  ser.rs  test.rs  value.rs
src/: de.rs  error.rs  lib.rs  regex.rs  ser.rs  value.rs
src/de/: access.rs  enum.rs  map.rs  read.rs
src/de/enum/: fake.rs  key.rs  unit.rs  value.rs
src/regex/: de.rs  ser.rs
src/ser/: enum.rs  map.rs  serializer.rs
src/value/: de.rs  map.rs  number.rs  ser.rs
tests/: bytes.rs  comment.rs  enum.rs  map.rs  maytest.rs  newline.rs  read.rs  regex.rs  seq.rs  ser.rs  spans.rs  str.rs  string.rs  struct.rs  stuff.rs  unicode.rs  untagged.rs  untagged_enum.rs  value.rs  word.rs
