[package]
name = "mayfig"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/mayfig"
license = "MPL-2.0"

[dependencies]
indexmap = { version = "2.12.1", features = ["serde"] }
itoa = "1.0.15"
serde_core = "1.0.228"
thiserror = "2.0.17"
zmij = "1.0.11"

[dev-dependencies]
annotate-snippets = "0.12.9"
anstream = "0.6.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"

[lints.clippy]
allow_attributes = "warn"
elidable_lifetime_names = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_semicolon = "warn"
